--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.omb.Game-Framework",
+    "name": "com.omb.gameframework",
     "version": "0.1.2",
     "displayName": "Game Framework",
     "dependencies": {
